# bpmn_rest

./: Dockerfile  README.MD  deploy.env  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
bpmn_rest/: asgi.py  settings.py  urls.py  wsgi.py
reports/: urls.py  views.py
tasks/: models.py  serializers.py  urls.py  views.py
tasks/bpmn_diagrams/: CreateTask.xml  GetTask.xml
tasks/bpmn_utils/: create_task.py  get_task.py
tasks/migrations/: 0001_initial.py
users/: serializers.py  views.py
